<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_activity_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    >


    <TextView
        android:id="@+id/tv_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="166dp"
        android:text="@string/app_name"
        android:textColor="@color/default_text"
        android:textSize="@dimen/title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/title_login"
        android:textColor="@color/default_text"
        android:textSize="@dimen/field_title"
        app:layout_constraintTop_toBottomOf="@id/tv_app_title"
        app:layout_constraintEnd_toStartOf="@id/tv_app_title"
        />


    <EditText
        android:id="@+id/et_login"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:textColor="@color/default_text"
        tools:ignore="Autofill"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        app:layout_constraintStart_toStartOf="@id/tv_login"
        />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/title_password"
        android:textColor="@color/default_text"
        android:textSize="@dimen/field_title"
        app:layout_constraintTop_toBottomOf="@id/et_login"
        app:layout_constraintStart_toStartOf="@id/et_login"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColor="@color/default_text"
        tools:ignore="Autofill"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintStart_toStartOf="@id/tv_password"
        />


    <Button
        android:id="@+id/btn_sign_in"
        style="@style/DefaultButton"
        android:layout_width="@dimen/button_width"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="@id/et_password"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <Button
        android:id="@+id/btn_forgot_password"
        style="@style/TextButton"
        android:layout_width="@dimen/button_width"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="@id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

    <fragment android:name="com.andre1.app.fragment.Fragment1"
        android:id="@+id/list"
        android:layout_weight="1"
        android:layout_width="160dp"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
